force-app/main/default/objects/Apartment__c/Apartment__c.object-meta.xml
<CustomObject>
    <label>Apartment</label>
    <nameField>
        <label>Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apartments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>