force-app/main/default/objects/Apartment__c/fields/Total_No_Of_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_No_Of_Units__c</fullName>
    <label>Total No Of Units</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>