force-app/main/default/objects/Apartment__c/fields/Total_SqFt_of_the_Building__c.field-meta.xml
<CustomField>
    <fullName>Total_SqFt_of_the_Building__c</fullName>
    <label>Total SqFt of the Building</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>